syntax = "proto3";

option go_package = "github.com/chronos-tachyon/roxy/roxypb";

package roxy;

service WebServer {
  rpc Serve (stream WebMessage) returns (stream WebMessage) {}
}

message WebMessage {
  bytes body_chunk = 1;
  repeated KeyValue headers = 2;
  repeated KeyValue trailers = 3;
}

message KeyValue {
  string key = 1;
  string value = 2;
}

service AirTrafficControl {
  rpc Lookup (LookupRequest) returns (LookupResponse) {}
  rpc Find (FindRequest) returns (FindResponse) {}
  rpc ServerAnnounce (stream ServerAnnounceRequest) returns (stream ServerAnnounceResponse) {}
  rpc ClientAssign (stream ClientAssignRequest) returns (stream ClientAssignResponse) {}
}

message LookupRequest {
  string service_name = 1;
}

message LookupResponse {
  bool is_sharded = 1;
  uint32 num_shards = 2;
  uint32 expected_num_clients_per_shard = 3;
  uint32 expected_num_servers_per_shard = 4;
  float max_load_per_server = 5;
  CommonNameList allowed_client_common_names = 6;
  CommonNameList allowed_server_common_names = 7;
}

message FindRequest {
  string service_name = 1;
  uint32 shard_id = 2;
}

message FindResponse {
  GoAway go_away = 1;
}

message ServerAnnounceRequest {
  string service_name = 1;
  uint32 shard_id = 2;
  string location = 3;
  string unique = 4;
  string server_name = 5;
  bytes ip = 6;
  string zone = 7;
  uint32 port = 8;
  bool has_shard_id = 15;
  float load = 16;
}

message ServerAnnounceResponse {
  GoAway go_away = 1;
}

message ClientAssignRequest {
  string service_name = 1;
  uint32 shard_id = 2;
  string location = 3;
  string unique = 4;
  bool has_shard_id = 15;
}

message ClientAssignResponse {
  GoAway go_away = 1;
  repeated Event events = 2;
}

message CommonNameList {
  repeated string common_name = 1;
}

message GoAway {
  bytes ip = 1;
  string zone = 2;
  uint32 port = 3;
}

message Event {
  enum Type {
    UNKNOWN = 0;
    INSERT_IP = 1;
    DELETE_IP = 2;
    UPDATE_WEIGHT = 3;
    NEW_SERVICE_CONFIG = 4;
  }
  Type event_type = 1;
  string location = 2;
  string unique = 3;
  string server_name = 4;
  bytes ip = 5;
  string zone = 6;
  uint32 port = 7;
  float weight = 8;
  string service_config_json = 64;
}

service Admin {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc Reload (ReloadRequest) returns (ReloadResponse) {}
  rpc Shutdown (ShutdownRequest) returns (ShutdownResponse) {}
  rpc SetHealth (SetHealthRequest) returns (SetHealthResponse) {}
}

message PingRequest {}
message PingResponse {}

message ReloadRequest {}
message ReloadResponse {}

message ShutdownRequest {}
message ShutdownResponse {}

message SetHealthRequest {
  string subsystem_name = 1;
  bool is_healthy = 2;
}

message SetHealthResponse {
}
